# claudeforge

./: Cargo.toml  Justfile  README.md  deny.toml  install.sh
.claude/: settings.json
.claude/commands/: add-template.md
.github/workflows/: release.yml
specs/: 000-specs-status.md  010-claudeforge-cli.md  020-github-actions-workflows.md  030-custom-template-support.md  040-test-coverage-improvement.md  050-template-splicing.md  060-template-variable-support.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs
src/git/: mod.rs
src/template/: loader.rs  mod.rs  processor.rs  registry.rs
src/utils/: fs.rs
tests/: main.rs
tests/integration/: basic_tests.rs  cli_integration_test.rs  main.rs  main_integration_test.rs
tests/unit/: config_test.rs  fs_test.rs  git_test.rs  loader_test.rs  main_test.rs  mod.rs  processor_test.rs  toml_test.rs
