[package]
name = "claudeforge"
version = "0.1.2"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
description = "Create new projects optimized for Claude Code"
license = "GPL-3.0"
repository = "https://github.com/iepathos/claudeforge"
keywords = ["cli", "template", "scaffolding", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Filesystem
dirs = "6"
tempfile = "3"

# Git operations
git2 = { version = "0.20", default-features = false, features = ["https", "vendored-openssl"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
tempfile = "3"
mockall = "0.13"

[[bin]]
name = "claudeforge"
path = "src/main.rs"